Thu Dec  8 06:54:31 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/examples/LoadBalancing/ServerRequestInterceptor.h:

	  Fixed versioned namespace build errors, predominantly caused by
	  forwared declarations not being placed within the appropriate
	  {ACE,TAO}_{BEGIN,END}_VERSIONED_NAMESPACE_DECL block.

Thu Dec  8 06:45:36 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/OctetSeq/OctetSeq.mpc:
	* performance-tests/Anyop/Anyop.mpc:
	* performance-tests/POA/Create_Reference/Create_Reference.mpc:
	* performance-tests/POA/Implicit_Activation/Implicit_Activation.mpc:
	* performance-tests/POA/Object_Creation_And_Registration/Object_Creation_And_Registration.mpc:
	* performance-tests/Protocols/Protocols.mpc:
	* performance-tests/RTCorba/Thread_Pool/Thread_Pool.mpc:

	  Disable these projects when "ace_for_tao" is enabled.

Wed Dec  7 19:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Workaround for Borland is also needed for BSD2006

Wed Dec  7 18:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/CSD_Strategy/ThreadPool/CSD_Test_ThreadPool.mpc:
        * examples/CSD_Strategy/ThreadPool2/CSD_Test_ThreadPool2.mpc:
        * examples/CSD_Strategy/ThreadPool3/CSD_Test_ThreadPool3.mpc:
        * examples/CSD_Strategy/ThreadPool3/CSD_Test_ThreadPool5.mpc:
        * examples/CSD_Strategy/ThreadPool3/CSD_Test_ThreadPool6.mpc:
          Added 'after += ...' lines to files where projects share one or
          more IDL files.

        * examples/CSD_Strategy/ThreadPool4/CSD_Test_ThreadPool4.mpc:
          Simplified

Wed Dec  7 05:43:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Connection_Timeout/Connection_Timeout.mpc:
	* tests/Hang_Shutdown/Hang.mpc:
	* tests/Param_Test/Param_Test.mpc:

          Disable these projects when "ace_for_tao" is enabled.

Wed Dec  7 10:59:55 USMST 2005  Yan Dai  <dai_y@ociweb.com>
